[gd_scene load_steps=2 format=2]

[ext_resource path="res://Example.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Blip" type="Button" parent="."]
margin_left = 203.75
margin_top = 160.0
margin_right = 353.75
margin_bottom = 260.0
text = "Blip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="Button" parent="."]
margin_left = 368.75
margin_top = 161.25
margin_right = 518.75
margin_bottom = 261.25
text = "Laser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirmation" type="Button" parent="."]
margin_left = 277.5
margin_top = 270.0
margin_right = 427.5
margin_bottom = 370.0
text = "Confirmation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="Button" parent="."]
margin_left = 687.5
margin_top = 230.0
margin_right = 837.5
margin_bottom = 330.0
text = "BGM (loops)"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Blip" to="." method="_on_Blip_pressed"]
[connection signal="pressed" from="Laser" to="." method="_on_Laser_pressed"]
[connection signal="pressed" from="Confirmation" to="." method="_on_Confirmation_pressed"]
[connection signal="pressed" from="BGM" to="." method="_on_BGM_pressed"]
